<?xml version="1.0"?>
<package format="2">
  <name>camp</name>
  <version>1.0.0</version>
  <description>The CAMP package</description>

  <maintainer email="singh-manpreet@outlook.com">Manpreet Singh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>camp_gmapping</exec_depend>
  <exec_depend>camp_goto</exec_depend>
  <exec_depend>camp_map</exec_depend>
  <exec_depend>camp_multiagent</exec_depend>
  <exec_depend>camp_pathfinding</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export><metapackage/></export>
</package>
